file name modified & href's also modified

--- a/web/home.html
+++ b/web/home.html
@@ -98,11 +98,11 @@ a:hover, a:active {
 
 <ul>
 
-<li><p><a href="ABOUT.html">ABOUT</a></p></li>
-<li><p><a href="REGISTER PAGE.html">REGISTRATION PAGE</a></p></li>
-<li><p><a href="EVENTDETAILS.html">EVENT DETAILS</a></p></li>
-<li><p><a href="CONTACTT.html">CONTACT US</a></p></li>
-<li><p><a href="FEEDBACKK.html">FEED BACK</a></p></li>
+<li><p><a href="about.html">ABOUT</a></p></li>
+<li><p><a href="register_page.html">REGISTRATION PAGE</a></p></li>
+<li><p><a href="event_details.html">EVENT DETAILS</a></p></li>
+<li><p><a href="contact.html">CONTACT US</a></p></li>
+<li><p><a href="feedback.html">FEED BACK</a></p></li>
 </ul>
 <div class="slideshow-container">
 
