--- a/web/home.html
+++ b/web/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Home</title>
 <h1><center><b>BANNARI AMMAN INSTITUTE OF TECHNOLOGY</b></center></h1><br>
 <h2><center><b>CRYPTO</b></center></h2>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -98,7 +99,7 @@ a:hover, a:active {
 
 <ul>
 
-<li><p><a href="about.html">ABOUT</a></p></li>
+<li><p><a href="about_the_college.html">ABOUT</a></p></li>
 <li><p><a href="register_page.html">REGISTRATION PAGE</a></p></li>
 <li><p><a href="event_details.html">EVENT DETAILS</a></p></li>
 <li><p><a href="contact.html">CONTACT US</a></p></li>
